--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "cris-utils",
   "version": "1.0.5",
   "description": "General method library for front end development.",
-  "main": "./dist/bundle.js",
+  "main": "./output/dist/index.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config config/webpack.config.js"
+    "clean": "rm -rf ./output/",
+    "start": "npm run clean && NODE_ENV=development rollup -w -c ./config/rollup.config.js",
+    "build": "npm run clean && NODE_ENV=production rollup -c ./config/rollup.config.js"
   },
+  "files": [
+    "dist",
+    "lib",
+    "es",
+    "types"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cirsyou/utilslibrary.git"
@@ -22,9 +29,15 @@
   "homepage": "https://github.com/cirsyou/utilslibrary#readme",
   "devDependencies": {
     "@babel/core": "^7.10.3",
+    "@babel/plugin-transform-runtime": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
-    "babel-loader": "^8.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "rollup": "^2.18.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-uglify": "^6.0.4",
+    "url": "^0.11.0"
   }
 }
