--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cris-utils",
-  "version": "1.0.5",
+  "version": "1.0.8",
   "description": "General method library for front end development.",
   "main": "./output/dist/index.min.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "build": "npm run clean && NODE_ENV=production rollup -c ./config/rollup.config.js"
   },
   "files": [
-    "dist",
+    "output",
     "lib",
     "es",
     "types"
